<resources>
    <string name="app_name">Calculator: Tate-Moffo</string>

    <string name="text_mathResult">AHHHH</string>

    <string name="text_C">C</string>
    <string name="text_CE">CE</string>
    <string name="text_sign">+/-</string>
    <string name="text_divide">÷</string>

    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_add">+</string>

    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_subtract">-</string>

    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_multiply">*</string>

    <string name="text_0">0</string>
    <string name="text_decimal">.</string>
    <string name="text_equals">=</string>
</resources>